// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<ContentPackEditParameters /> should render a form for creation 1`] = `
.c0 {
  color: #1f1f1f;
  font-weight: bold;
  margin-bottom: 5px;
  display: inline-block;
}

.c1.form-control {
  color: #1f1f1f;
  background-color: #fff;
  border-color: #a6a6a6;
}

.c1.form-control::-webkit-input-placeholder {
  color: #9b9b9b;
}

.c1.form-control::-moz-placeholder {
  color: #9b9b9b;
}

.c1.form-control:-ms-input-placeholder {
  color: #9b9b9b;
}

.c1.form-control::placeholder {
  color: #9b9b9b;
}

.c1.form-control:focus {
  border-color: #7894ce;
  box-shadow: inset 0 1px 1px rgba(0,0,0,0.075),0 0 8px rgba(120,148,206,0.4);
}

.c1.form-control[disabled],
.c1.form-control[readonly],
fieldset[disabled] .c1.form-control {
  background-color: #dddddd;
  color: #9b9b9b;
}

.c1.form-control ~ .form-control-feedback.glyphicon {
  display: none;
}

.c2 {
  display: block;
  margin-top: 5px;
  margin-bottom: 10px;
  color: #838383;
}

<ContentPackEditParameter
  onUpdateParameter={[Function]}
  parameters={
    Array [
      Object {
        "default_value": "test",
        "description": "A parameter descriptions",
        "name": "A parameter name",
        "title": "A parameter title",
        "type": "string",
      },
    ]
  }
>
  <div>
    <h2>
      Create parameter
    </h2>
    <br />
    <form
      className="parameter-form"
      id="parameter-form"
      onSubmit={[Function]}
    >
      <fieldset>
        <Input
          addonAfter={null}
          bsStyle={null}
          buttonAfter={null}
          help="Give a descriptive title for this content pack."
          id="title"
          label="Title"
          maxLength={250}
          name="title"
          onChange={[Function]}
          placeholder=""
          required={true}
          type="text"
          value=""
        >
          <Component
            controlId="title"
            validationState={null}
          >
            <FormGroup__StyledFormGroup
              controlId="title"
              validationState={null}
            >
              <FormGroup
                bsClass="form-group"
                className=""
                controlId="title"
                validationState={null}
              >
                <div
                  className="form-group"
                >
                  <ControlLabel>
                    <ControlLabel
                      bsClass="control-label"
                      className="c0"
                      srOnly={false}
                    >
                      <label
                        className="c0 control-label"
                        htmlFor="title"
                      >
                        Title
                      </label>
                    </ControlLabel>
                  </ControlLabel>
                  <InputWrapper>
                    <span>
                      <FormControl
                        componentClass="input"
                        inputRef={[Function]}
                        label="Title"
                        maxLength={250}
                        name="title"
                        onChange={[Function]}
                        placeholder=""
                        required={true}
                        type="text"
                        value=""
                      >
                        <FormControl
                          bsClass="form-control"
                          className="c1"
                          componentClass="input"
                          inputRef={[Function]}
                          label="Title"
                          maxLength={250}
                          name="title"
                          onChange={[Function]}
                          placeholder=""
                          required={true}
                          type="text"
                          value=""
                        >
                          <input
                            className="c1 form-control"
                            id="title"
                            label="Title"
                            maxLength={250}
                            name="title"
                            onChange={[Function]}
                            placeholder=""
                            required={true}
                            type="text"
                            value=""
                          />
                        </FormControl>
                      </FormControl>
                      <HelpBlock>
                        <HelpBlock
                          bsClass="help-block"
                          className="c2"
                        >
                          <span
                            className="c2 help-block"
                          >
                            Give a descriptive title for this content pack.
                          </span>
                        </HelpBlock>
                      </HelpBlock>
                    </span>
                  </InputWrapper>
                </div>
              </FormGroup>
            </FormGroup__StyledFormGroup>
          </Component>
        </Input>
        <Input
          addonAfter={null}
          bsStyle={null}
          buttonAfter={null}
          help="This is used as the parameter reference and must not contain a space."
          id="name"
          label="Name"
          maxLength={250}
          name="name"
          onChange={[Function]}
          placeholder=""
          required={true}
          type="text"
          value=""
        >
          <Component
            controlId="name"
            validationState={null}
          >
            <FormGroup__StyledFormGroup
              controlId="name"
              validationState={null}
            >
              <FormGroup
                bsClass="form-group"
                className=""
                controlId="name"
                validationState={null}
              >
                <div
                  className="form-group"
                >
                  <ControlLabel>
                    <ControlLabel
                      bsClass="control-label"
                      className="c0"
                      srOnly={false}
                    >
                      <label
                        className="c0 control-label"
                        htmlFor="name"
                      >
                        Name
                      </label>
                    </ControlLabel>
                  </ControlLabel>
                  <InputWrapper>
                    <span>
                      <FormControl
                        componentClass="input"
                        inputRef={[Function]}
                        label="Name"
                        maxLength={250}
                        name="name"
                        onChange={[Function]}
                        placeholder=""
                        required={true}
                        type="text"
                        value=""
                      >
                        <FormControl
                          bsClass="form-control"
                          className="c1"
                          componentClass="input"
                          inputRef={[Function]}
                          label="Name"
                          maxLength={250}
                          name="name"
                          onChange={[Function]}
                          placeholder=""
                          required={true}
                          type="text"
                          value=""
                        >
                          <input
                            className="c1 form-control"
                            id="name"
                            label="Name"
                            maxLength={250}
                            name="name"
                            onChange={[Function]}
                            placeholder=""
                            required={true}
                            type="text"
                            value=""
                          />
                        </FormControl>
                      </FormControl>
                      <HelpBlock>
                        <HelpBlock
                          bsClass="help-block"
                          className="c2"
                        >
                          <span
                            className="c2 help-block"
                          >
                            This is used as the parameter reference and must not contain a space.
                          </span>
                        </HelpBlock>
                      </HelpBlock>
                    </span>
                  </InputWrapper>
                </div>
              </FormGroup>
            </FormGroup__StyledFormGroup>
          </Component>
        </Input>
        <Input
          addonAfter={null}
          bsStyle={null}
          buttonAfter={null}
          help="Give a description explaining what will be done with this parameter."
          id="description"
          label="Description"
          maxLength={250}
          name="description"
          onChange={[Function]}
          placeholder=""
          required={true}
          type="text"
          value=""
        >
          <Component
            controlId="description"
            validationState={null}
          >
            <FormGroup__StyledFormGroup
              controlId="description"
              validationState={null}
            >
              <FormGroup
                bsClass="form-group"
                className=""
                controlId="description"
                validationState={null}
              >
                <div
                  className="form-group"
                >
                  <ControlLabel>
                    <ControlLabel
                      bsClass="control-label"
                      className="c0"
                      srOnly={false}
                    >
                      <label
                        className="c0 control-label"
                        htmlFor="description"
                      >
                        Description
                      </label>
                    </ControlLabel>
                  </ControlLabel>
                  <InputWrapper>
                    <span>
                      <FormControl
                        componentClass="input"
                        inputRef={[Function]}
                        label="Description"
                        maxLength={250}
                        name="description"
                        onChange={[Function]}
                        placeholder=""
                        required={true}
                        type="text"
                        value=""
                      >
                        <FormControl
                          bsClass="form-control"
                          className="c1"
                          componentClass="input"
                          inputRef={[Function]}
                          label="Description"
                          maxLength={250}
                          name="description"
                          onChange={[Function]}
                          placeholder=""
                          required={true}
                          type="text"
                          value=""
                        >
                          <input
                            className="c1 form-control"
                            id="description"
                            label="Description"
                            maxLength={250}
                            name="description"
                            onChange={[Function]}
                            placeholder=""
                            required={true}
                            type="text"
                            value=""
                          />
                        </FormControl>
                      </FormControl>
                      <HelpBlock>
                        <HelpBlock
                          bsClass="help-block"
                          className="c2"
                        >
                          <span
                            className="c2 help-block"
                          >
                            Give a description explaining what will be done with this parameter.
                          </span>
                        </HelpBlock>
                      </HelpBlock>
                    </span>
                  </InputWrapper>
                </div>
              </FormGroup>
            </FormGroup__StyledFormGroup>
          </Component>
        </Input>
        <Input
          addonAfter={null}
          bsStyle={null}
          buttonAfter={null}
          disabled={false}
          help="Give the type of the parameter."
          id="type"
          label="Value Type"
          name="type"
          onChange={[Function]}
          placeholder=""
          required={true}
          type="select"
          value="string"
        >
          <Component
            controlId="type"
            validationState={null}
          >
            <FormGroup__StyledFormGroup
              controlId="type"
              validationState={null}
            >
              <FormGroup
                bsClass="form-group"
                className=""
                controlId="type"
                validationState={null}
              >
                <div
                  className="form-group"
                >
                  <ControlLabel>
                    <ControlLabel
                      bsClass="control-label"
                      className="c0"
                      srOnly={false}
                    >
                      <label
                        className="c0 control-label"
                        htmlFor="type"
                      >
                        Value Type
                      </label>
                    </ControlLabel>
                  </ControlLabel>
                  <InputWrapper>
                    <span>
                      <FormControl
                        componentClass="select"
                        disabled={false}
                        inputRef={[Function]}
                        label="Value Type"
                        name="type"
                        onChange={[Function]}
                        placeholder=""
                        required={true}
                        type="select"
                        value="string"
                      >
                        <FormControl
                          bsClass="form-control"
                          className="c1"
                          componentClass="select"
                          disabled={false}
                          inputRef={[Function]}
                          label="Value Type"
                          name="type"
                          onChange={[Function]}
                          placeholder=""
                          required={true}
                          type="select"
                          value="string"
                        >
                          <select
                            className="c1 form-control"
                            disabled={false}
                            id="type"
                            label="Value Type"
                            name="type"
                            onChange={[Function]}
                            placeholder=""
                            required={true}
                            type="select"
                            value="string"
                          >
                            <option
                              value="string"
                            >
                              String
                            </option>
                            <option
                              value="integer"
                            >
                              Integer
                            </option>
                            <option
                              value="double"
                            >
                              Double
                            </option>
                            <option
                              value="boolean"
                            >
                              Boolean
                            </option>
                          </select>
                        </FormControl>
                      </FormControl>
                      <HelpBlock>
                        <HelpBlock
                          bsClass="help-block"
                          className="c2"
                        >
                          <span
                            className="c2 help-block"
                          >
                            Give the type of the parameter.
                          </span>
                        </HelpBlock>
                      </HelpBlock>
                    </span>
                  </InputWrapper>
                </div>
              </FormGroup>
            </FormGroup__StyledFormGroup>
          </Component>
        </Input>
        <Input
          addonAfter={null}
          bsStyle={null}
          buttonAfter={null}
          help="Give a default value if the parameter is not optional."
          id="default_value"
          label="Default value"
          maxLength={250}
          name="default_value"
          onChange={[Function]}
          placeholder=""
          type="text"
          value=""
        >
          <Component
            controlId="default_value"
            validationState={null}
          >
            <FormGroup__StyledFormGroup
              controlId="default_value"
              validationState={null}
            >
              <FormGroup
                bsClass="form-group"
                className=""
                controlId="default_value"
                validationState={null}
              >
                <div
                  className="form-group"
                >
                  <ControlLabel>
                    <ControlLabel
                      bsClass="control-label"
                      className="c0"
                      srOnly={false}
                    >
                      <label
                        className="c0 control-label"
                        htmlFor="default_value"
                      >
                        Default value
                      </label>
                    </ControlLabel>
                  </ControlLabel>
                  <InputWrapper>
                    <span>
                      <FormControl
                        componentClass="input"
                        inputRef={[Function]}
                        label="Default value"
                        maxLength={250}
                        name="default_value"
                        onChange={[Function]}
                        placeholder=""
                        type="text"
                        value=""
                      >
                        <FormControl
                          bsClass="form-control"
                          className="c1"
                          componentClass="input"
                          inputRef={[Function]}
                          label="Default value"
                          maxLength={250}
                          name="default_value"
                          onChange={[Function]}
                          placeholder=""
                          type="text"
                          value=""
                        >
                          <input
                            className="c1 form-control"
                            id="default_value"
                            label="Default value"
                            maxLength={250}
                            name="default_value"
                            onChange={[Function]}
                            placeholder=""
                            type="text"
                            value=""
                          />
                        </FormControl>
                      </FormControl>
                      <HelpBlock>
                        <HelpBlock
                          bsClass="help-block"
                          className="c2"
                        >
                          <span
                            className="c2 help-block"
                          >
                            Give a default value if the parameter is not optional.
                          </span>
                        </HelpBlock>
                      </HelpBlock>
                    </span>
                  </InputWrapper>
                </div>
              </FormGroup>
            </FormGroup__StyledFormGroup>
          </Component>
        </Input>
      </fieldset>
    </form>
  </div>
</ContentPackEditParameter>
`;

exports[`<ContentPackEditParameters /> should render a form for edition 1`] = `
.c0 {
  color: #1f1f1f;
  font-weight: bold;
  margin-bottom: 5px;
  display: inline-block;
}

.c1.form-control {
  color: #1f1f1f;
  background-color: #fff;
  border-color: #a6a6a6;
}

.c1.form-control::-webkit-input-placeholder {
  color: #9b9b9b;
}

.c1.form-control::-moz-placeholder {
  color: #9b9b9b;
}

.c1.form-control:-ms-input-placeholder {
  color: #9b9b9b;
}

.c1.form-control::placeholder {
  color: #9b9b9b;
}

.c1.form-control:focus {
  border-color: #7894ce;
  box-shadow: inset 0 1px 1px rgba(0,0,0,0.075),0 0 8px rgba(120,148,206,0.4);
}

.c1.form-control[disabled],
.c1.form-control[readonly],
fieldset[disabled] .c1.form-control {
  background-color: #dddddd;
  color: #9b9b9b;
}

.c1.form-control ~ .form-control-feedback.glyphicon {
  display: none;
}

.c2 {
  display: block;
  margin-top: 5px;
  margin-bottom: 10px;
  color: #838383;
}

<ContentPackEditParameter
  onUpdateParameter={[Function]}
  parameterToEdit={
    Object {
      "default_value": "test",
      "description": "A parameter descriptions",
      "name": "A parameter name",
      "title": "A parameter title",
      "type": "string",
    }
  }
  parameters={
    Array [
      Object {
        "default_value": "test",
        "description": "A parameter descriptions",
        "name": "A parameter name",
        "title": "A parameter title",
        "type": "string",
      },
    ]
  }
>
  <div>
    <h2>
      Edit parameter
    </h2>
    <br />
    <form
      className="parameter-form"
      id="parameter-form"
      onSubmit={[Function]}
    >
      <fieldset>
        <Input
          addonAfter={null}
          bsStyle={null}
          buttonAfter={null}
          help="Give a descriptive title for this content pack."
          id="title"
          label="Title"
          maxLength={250}
          name="title"
          onChange={[Function]}
          placeholder=""
          required={true}
          type="text"
          value="A parameter title"
        >
          <Component
            controlId="title"
            validationState={null}
          >
            <FormGroup__StyledFormGroup
              controlId="title"
              validationState={null}
            >
              <FormGroup
                bsClass="form-group"
                className=""
                controlId="title"
                validationState={null}
              >
                <div
                  className="form-group"
                >
                  <ControlLabel>
                    <ControlLabel
                      bsClass="control-label"
                      className="c0"
                      srOnly={false}
                    >
                      <label
                        className="c0 control-label"
                        htmlFor="title"
                      >
                        Title
                      </label>
                    </ControlLabel>
                  </ControlLabel>
                  <InputWrapper>
                    <span>
                      <FormControl
                        componentClass="input"
                        inputRef={[Function]}
                        label="Title"
                        maxLength={250}
                        name="title"
                        onChange={[Function]}
                        placeholder=""
                        required={true}
                        type="text"
                        value="A parameter title"
                      >
                        <FormControl
                          bsClass="form-control"
                          className="c1"
                          componentClass="input"
                          inputRef={[Function]}
                          label="Title"
                          maxLength={250}
                          name="title"
                          onChange={[Function]}
                          placeholder=""
                          required={true}
                          type="text"
                          value="A parameter title"
                        >
                          <input
                            className="c1 form-control"
                            id="title"
                            label="Title"
                            maxLength={250}
                            name="title"
                            onChange={[Function]}
                            placeholder=""
                            required={true}
                            type="text"
                            value="A parameter title"
                          />
                        </FormControl>
                      </FormControl>
                      <HelpBlock>
                        <HelpBlock
                          bsClass="help-block"
                          className="c2"
                        >
                          <span
                            className="c2 help-block"
                          >
                            Give a descriptive title for this content pack.
                          </span>
                        </HelpBlock>
                      </HelpBlock>
                    </span>
                  </InputWrapper>
                </div>
              </FormGroup>
            </FormGroup__StyledFormGroup>
          </Component>
        </Input>
        <Input
          addonAfter={null}
          bsStyle={null}
          buttonAfter={null}
          help="This is used as the parameter reference and must not contain a space."
          id="name"
          label="Name"
          maxLength={250}
          name="name"
          onChange={[Function]}
          placeholder=""
          required={true}
          type="text"
          value="A parameter name"
        >
          <Component
            controlId="name"
            validationState={null}
          >
            <FormGroup__StyledFormGroup
              controlId="name"
              validationState={null}
            >
              <FormGroup
                bsClass="form-group"
                className=""
                controlId="name"
                validationState={null}
              >
                <div
                  className="form-group"
                >
                  <ControlLabel>
                    <ControlLabel
                      bsClass="control-label"
                      className="c0"
                      srOnly={false}
                    >
                      <label
                        className="c0 control-label"
                        htmlFor="name"
                      >
                        Name
                      </label>
                    </ControlLabel>
                  </ControlLabel>
                  <InputWrapper>
                    <span>
                      <FormControl
                        componentClass="input"
                        inputRef={[Function]}
                        label="Name"
                        maxLength={250}
                        name="name"
                        onChange={[Function]}
                        placeholder=""
                        required={true}
                        type="text"
                        value="A parameter name"
                      >
                        <FormControl
                          bsClass="form-control"
                          className="c1"
                          componentClass="input"
                          inputRef={[Function]}
                          label="Name"
                          maxLength={250}
                          name="name"
                          onChange={[Function]}
                          placeholder=""
                          required={true}
                          type="text"
                          value="A parameter name"
                        >
                          <input
                            className="c1 form-control"
                            id="name"
                            label="Name"
                            maxLength={250}
                            name="name"
                            onChange={[Function]}
                            placeholder=""
                            required={true}
                            type="text"
                            value="A parameter name"
                          />
                        </FormControl>
                      </FormControl>
                      <HelpBlock>
                        <HelpBlock
                          bsClass="help-block"
                          className="c2"
                        >
                          <span
                            className="c2 help-block"
                          >
                            This is used as the parameter reference and must not contain a space.
                          </span>
                        </HelpBlock>
                      </HelpBlock>
                    </span>
                  </InputWrapper>
                </div>
              </FormGroup>
            </FormGroup__StyledFormGroup>
          </Component>
        </Input>
        <Input
          addonAfter={null}
          bsStyle={null}
          buttonAfter={null}
          help="Give a description explaining what will be done with this parameter."
          id="description"
          label="Description"
          maxLength={250}
          name="description"
          onChange={[Function]}
          placeholder=""
          required={true}
          type="text"
          value="A parameter descriptions"
        >
          <Component
            controlId="description"
            validationState={null}
          >
            <FormGroup__StyledFormGroup
              controlId="description"
              validationState={null}
            >
              <FormGroup
                bsClass="form-group"
                className=""
                controlId="description"
                validationState={null}
              >
                <div
                  className="form-group"
                >
                  <ControlLabel>
                    <ControlLabel
                      bsClass="control-label"
                      className="c0"
                      srOnly={false}
                    >
                      <label
                        className="c0 control-label"
                        htmlFor="description"
                      >
                        Description
                      </label>
                    </ControlLabel>
                  </ControlLabel>
                  <InputWrapper>
                    <span>
                      <FormControl
                        componentClass="input"
                        inputRef={[Function]}
                        label="Description"
                        maxLength={250}
                        name="description"
                        onChange={[Function]}
                        placeholder=""
                        required={true}
                        type="text"
                        value="A parameter descriptions"
                      >
                        <FormControl
                          bsClass="form-control"
                          className="c1"
                          componentClass="input"
                          inputRef={[Function]}
                          label="Description"
                          maxLength={250}
                          name="description"
                          onChange={[Function]}
                          placeholder=""
                          required={true}
                          type="text"
                          value="A parameter descriptions"
                        >
                          <input
                            className="c1 form-control"
                            id="description"
                            label="Description"
                            maxLength={250}
                            name="description"
                            onChange={[Function]}
                            placeholder=""
                            required={true}
                            type="text"
                            value="A parameter descriptions"
                          />
                        </FormControl>
                      </FormControl>
                      <HelpBlock>
                        <HelpBlock
                          bsClass="help-block"
                          className="c2"
                        >
                          <span
                            className="c2 help-block"
                          >
                            Give a description explaining what will be done with this parameter.
                          </span>
                        </HelpBlock>
                      </HelpBlock>
                    </span>
                  </InputWrapper>
                </div>
              </FormGroup>
            </FormGroup__StyledFormGroup>
          </Component>
        </Input>
        <Input
          addonAfter={null}
          bsStyle={null}
          buttonAfter={null}
          disabled={true}
          help="Give the type of the parameter."
          id="type"
          label="Value Type"
          name="type"
          onChange={[Function]}
          placeholder=""
          required={true}
          type="select"
          value="string"
        >
          <Component
            controlId="type"
            validationState={null}
          >
            <FormGroup__StyledFormGroup
              controlId="type"
              validationState={null}
            >
              <FormGroup
                bsClass="form-group"
                className=""
                controlId="type"
                validationState={null}
              >
                <div
                  className="form-group"
                >
                  <ControlLabel>
                    <ControlLabel
                      bsClass="control-label"
                      className="c0"
                      srOnly={false}
                    >
                      <label
                        className="c0 control-label"
                        htmlFor="type"
                      >
                        Value Type
                      </label>
                    </ControlLabel>
                  </ControlLabel>
                  <InputWrapper>
                    <span>
                      <FormControl
                        componentClass="select"
                        disabled={true}
                        inputRef={[Function]}
                        label="Value Type"
                        name="type"
                        onChange={[Function]}
                        placeholder=""
                        required={true}
                        type="select"
                        value="string"
                      >
                        <FormControl
                          bsClass="form-control"
                          className="c1"
                          componentClass="select"
                          disabled={true}
                          inputRef={[Function]}
                          label="Value Type"
                          name="type"
                          onChange={[Function]}
                          placeholder=""
                          required={true}
                          type="select"
                          value="string"
                        >
                          <select
                            className="c1 form-control"
                            disabled={true}
                            id="type"
                            label="Value Type"
                            name="type"
                            onChange={[Function]}
                            placeholder=""
                            required={true}
                            type="select"
                            value="string"
                          >
                            <option
                              value="string"
                            >
                              String
                            </option>
                            <option
                              value="integer"
                            >
                              Integer
                            </option>
                            <option
                              value="double"
                            >
                              Double
                            </option>
                            <option
                              value="boolean"
                            >
                              Boolean
                            </option>
                          </select>
                        </FormControl>
                      </FormControl>
                      <HelpBlock>
                        <HelpBlock
                          bsClass="help-block"
                          className="c2"
                        >
                          <span
                            className="c2 help-block"
                          >
                            Give the type of the parameter.
                          </span>
                        </HelpBlock>
                      </HelpBlock>
                    </span>
                  </InputWrapper>
                </div>
              </FormGroup>
            </FormGroup__StyledFormGroup>
          </Component>
        </Input>
        <Input
          addonAfter={null}
          bsStyle={null}
          buttonAfter={null}
          help="Give a default value if the parameter is not optional."
          id="default_value"
          label="Default value"
          maxLength={250}
          name="default_value"
          onChange={[Function]}
          placeholder=""
          type="text"
          value="test"
        >
          <Component
            controlId="default_value"
            validationState={null}
          >
            <FormGroup__StyledFormGroup
              controlId="default_value"
              validationState={null}
            >
              <FormGroup
                bsClass="form-group"
                className=""
                controlId="default_value"
                validationState={null}
              >
                <div
                  className="form-group"
                >
                  <ControlLabel>
                    <ControlLabel
                      bsClass="control-label"
                      className="c0"
                      srOnly={false}
                    >
                      <label
                        className="c0 control-label"
                        htmlFor="default_value"
                      >
                        Default value
                      </label>
                    </ControlLabel>
                  </ControlLabel>
                  <InputWrapper>
                    <span>
                      <FormControl
                        componentClass="input"
                        inputRef={[Function]}
                        label="Default value"
                        maxLength={250}
                        name="default_value"
                        onChange={[Function]}
                        placeholder=""
                        type="text"
                        value="test"
                      >
                        <FormControl
                          bsClass="form-control"
                          className="c1"
                          componentClass="input"
                          inputRef={[Function]}
                          label="Default value"
                          maxLength={250}
                          name="default_value"
                          onChange={[Function]}
                          placeholder=""
                          type="text"
                          value="test"
                        >
                          <input
                            className="c1 form-control"
                            id="default_value"
                            label="Default value"
                            maxLength={250}
                            name="default_value"
                            onChange={[Function]}
                            placeholder=""
                            type="text"
                            value="test"
                          />
                        </FormControl>
                      </FormControl>
                      <HelpBlock>
                        <HelpBlock
                          bsClass="help-block"
                          className="c2"
                        >
                          <span
                            className="c2 help-block"
                          >
                            Give a default value if the parameter is not optional.
                          </span>
                        </HelpBlock>
                      </HelpBlock>
                    </span>
                  </InputWrapper>
                </div>
              </FormGroup>
            </FormGroup__StyledFormGroup>
          </Component>
        </Input>
      </fieldset>
    </form>
  </div>
</ContentPackEditParameter>
`;

exports[`<ContentPackEditParameters /> should render with empty parameters 1`] = `
.c0 {
  color: #1f1f1f;
  font-weight: bold;
  margin-bottom: 5px;
  display: inline-block;
}

.c1.form-control {
  color: #1f1f1f;
  background-color: #fff;
  border-color: #a6a6a6;
}

.c1.form-control::-webkit-input-placeholder {
  color: #9b9b9b;
}

.c1.form-control::-moz-placeholder {
  color: #9b9b9b;
}

.c1.form-control:-ms-input-placeholder {
  color: #9b9b9b;
}

.c1.form-control::placeholder {
  color: #9b9b9b;
}

.c1.form-control:focus {
  border-color: #7894ce;
  box-shadow: inset 0 1px 1px rgba(0,0,0,0.075),0 0 8px rgba(120,148,206,0.4);
}

.c1.form-control[disabled],
.c1.form-control[readonly],
fieldset[disabled] .c1.form-control {
  background-color: #dddddd;
  color: #9b9b9b;
}

.c1.form-control ~ .form-control-feedback.glyphicon {
  display: none;
}

.c2 {
  display: block;
  margin-top: 5px;
  margin-bottom: 10px;
  color: #838383;
}

<ContentPackEditParameter
  onUpdateParameter={[Function]}
  parameters={Array []}
>
  <div>
    <h2>
      Create parameter
    </h2>
    <br />
    <form
      className="parameter-form"
      id="parameter-form"
      onSubmit={[Function]}
    >
      <fieldset>
        <Input
          addonAfter={null}
          bsStyle={null}
          buttonAfter={null}
          help="Give a descriptive title for this content pack."
          id="title"
          label="Title"
          maxLength={250}
          name="title"
          onChange={[Function]}
          placeholder=""
          required={true}
          type="text"
          value=""
        >
          <Component
            controlId="title"
            validationState={null}
          >
            <FormGroup__StyledFormGroup
              controlId="title"
              validationState={null}
            >
              <FormGroup
                bsClass="form-group"
                className=""
                controlId="title"
                validationState={null}
              >
                <div
                  className="form-group"
                >
                  <ControlLabel>
                    <ControlLabel
                      bsClass="control-label"
                      className="c0"
                      srOnly={false}
                    >
                      <label
                        className="c0 control-label"
                        htmlFor="title"
                      >
                        Title
                      </label>
                    </ControlLabel>
                  </ControlLabel>
                  <InputWrapper>
                    <span>
                      <FormControl
                        componentClass="input"
                        inputRef={[Function]}
                        label="Title"
                        maxLength={250}
                        name="title"
                        onChange={[Function]}
                        placeholder=""
                        required={true}
                        type="text"
                        value=""
                      >
                        <FormControl
                          bsClass="form-control"
                          className="c1"
                          componentClass="input"
                          inputRef={[Function]}
                          label="Title"
                          maxLength={250}
                          name="title"
                          onChange={[Function]}
                          placeholder=""
                          required={true}
                          type="text"
                          value=""
                        >
                          <input
                            className="c1 form-control"
                            id="title"
                            label="Title"
                            maxLength={250}
                            name="title"
                            onChange={[Function]}
                            placeholder=""
                            required={true}
                            type="text"
                            value=""
                          />
                        </FormControl>
                      </FormControl>
                      <HelpBlock>
                        <HelpBlock
                          bsClass="help-block"
                          className="c2"
                        >
                          <span
                            className="c2 help-block"
                          >
                            Give a descriptive title for this content pack.
                          </span>
                        </HelpBlock>
                      </HelpBlock>
                    </span>
                  </InputWrapper>
                </div>
              </FormGroup>
            </FormGroup__StyledFormGroup>
          </Component>
        </Input>
        <Input
          addonAfter={null}
          bsStyle={null}
          buttonAfter={null}
          help="This is used as the parameter reference and must not contain a space."
          id="name"
          label="Name"
          maxLength={250}
          name="name"
          onChange={[Function]}
          placeholder=""
          required={true}
          type="text"
          value=""
        >
          <Component
            controlId="name"
            validationState={null}
          >
            <FormGroup__StyledFormGroup
              controlId="name"
              validationState={null}
            >
              <FormGroup
                bsClass="form-group"
                className=""
                controlId="name"
                validationState={null}
              >
                <div
                  className="form-group"
                >
                  <ControlLabel>
                    <ControlLabel
                      bsClass="control-label"
                      className="c0"
                      srOnly={false}
                    >
                      <label
                        className="c0 control-label"
                        htmlFor="name"
                      >
                        Name
                      </label>
                    </ControlLabel>
                  </ControlLabel>
                  <InputWrapper>
                    <span>
                      <FormControl
                        componentClass="input"
                        inputRef={[Function]}
                        label="Name"
                        maxLength={250}
                        name="name"
                        onChange={[Function]}
                        placeholder=""
                        required={true}
                        type="text"
                        value=""
                      >
                        <FormControl
                          bsClass="form-control"
                          className="c1"
                          componentClass="input"
                          inputRef={[Function]}
                          label="Name"
                          maxLength={250}
                          name="name"
                          onChange={[Function]}
                          placeholder=""
                          required={true}
                          type="text"
                          value=""
                        >
                          <input
                            className="c1 form-control"
                            id="name"
                            label="Name"
                            maxLength={250}
                            name="name"
                            onChange={[Function]}
                            placeholder=""
                            required={true}
                            type="text"
                            value=""
                          />
                        </FormControl>
                      </FormControl>
                      <HelpBlock>
                        <HelpBlock
                          bsClass="help-block"
                          className="c2"
                        >
                          <span
                            className="c2 help-block"
                          >
                            This is used as the parameter reference and must not contain a space.
                          </span>
                        </HelpBlock>
                      </HelpBlock>
                    </span>
                  </InputWrapper>
                </div>
              </FormGroup>
            </FormGroup__StyledFormGroup>
          </Component>
        </Input>
        <Input
          addonAfter={null}
          bsStyle={null}
          buttonAfter={null}
          help="Give a description explaining what will be done with this parameter."
          id="description"
          label="Description"
          maxLength={250}
          name="description"
          onChange={[Function]}
          placeholder=""
          required={true}
          type="text"
          value=""
        >
          <Component
            controlId="description"
            validationState={null}
          >
            <FormGroup__StyledFormGroup
              controlId="description"
              validationState={null}
            >
              <FormGroup
                bsClass="form-group"
                className=""
                controlId="description"
                validationState={null}
              >
                <div
                  className="form-group"
                >
                  <ControlLabel>
                    <ControlLabel
                      bsClass="control-label"
                      className="c0"
                      srOnly={false}
                    >
                      <label
                        className="c0 control-label"
                        htmlFor="description"
                      >
                        Description
                      </label>
                    </ControlLabel>
                  </ControlLabel>
                  <InputWrapper>
                    <span>
                      <FormControl
                        componentClass="input"
                        inputRef={[Function]}
                        label="Description"
                        maxLength={250}
                        name="description"
                        onChange={[Function]}
                        placeholder=""
                        required={true}
                        type="text"
                        value=""
                      >
                        <FormControl
                          bsClass="form-control"
                          className="c1"
                          componentClass="input"
                          inputRef={[Function]}
                          label="Description"
                          maxLength={250}
                          name="description"
                          onChange={[Function]}
                          placeholder=""
                          required={true}
                          type="text"
                          value=""
                        >
                          <input
                            className="c1 form-control"
                            id="description"
                            label="Description"
                            maxLength={250}
                            name="description"
                            onChange={[Function]}
                            placeholder=""
                            required={true}
                            type="text"
                            value=""
                          />
                        </FormControl>
                      </FormControl>
                      <HelpBlock>
                        <HelpBlock
                          bsClass="help-block"
                          className="c2"
                        >
                          <span
                            className="c2 help-block"
                          >
                            Give a description explaining what will be done with this parameter.
                          </span>
                        </HelpBlock>
                      </HelpBlock>
                    </span>
                  </InputWrapper>
                </div>
              </FormGroup>
            </FormGroup__StyledFormGroup>
          </Component>
        </Input>
        <Input
          addonAfter={null}
          bsStyle={null}
          buttonAfter={null}
          disabled={false}
          help="Give the type of the parameter."
          id="type"
          label="Value Type"
          name="type"
          onChange={[Function]}
          placeholder=""
          required={true}
          type="select"
          value="string"
        >
          <Component
            controlId="type"
            validationState={null}
          >
            <FormGroup__StyledFormGroup
              controlId="type"
              validationState={null}
            >
              <FormGroup
                bsClass="form-group"
                className=""
                controlId="type"
                validationState={null}
              >
                <div
                  className="form-group"
                >
                  <ControlLabel>
                    <ControlLabel
                      bsClass="control-label"
                      className="c0"
                      srOnly={false}
                    >
                      <label
                        className="c0 control-label"
                        htmlFor="type"
                      >
                        Value Type
                      </label>
                    </ControlLabel>
                  </ControlLabel>
                  <InputWrapper>
                    <span>
                      <FormControl
                        componentClass="select"
                        disabled={false}
                        inputRef={[Function]}
                        label="Value Type"
                        name="type"
                        onChange={[Function]}
                        placeholder=""
                        required={true}
                        type="select"
                        value="string"
                      >
                        <FormControl
                          bsClass="form-control"
                          className="c1"
                          componentClass="select"
                          disabled={false}
                          inputRef={[Function]}
                          label="Value Type"
                          name="type"
                          onChange={[Function]}
                          placeholder=""
                          required={true}
                          type="select"
                          value="string"
                        >
                          <select
                            className="c1 form-control"
                            disabled={false}
                            id="type"
                            label="Value Type"
                            name="type"
                            onChange={[Function]}
                            placeholder=""
                            required={true}
                            type="select"
                            value="string"
                          >
                            <option
                              value="string"
                            >
                              String
                            </option>
                            <option
                              value="integer"
                            >
                              Integer
                            </option>
                            <option
                              value="double"
                            >
                              Double
                            </option>
                            <option
                              value="boolean"
                            >
                              Boolean
                            </option>
                          </select>
                        </FormControl>
                      </FormControl>
                      <HelpBlock>
                        <HelpBlock
                          bsClass="help-block"
                          className="c2"
                        >
                          <span
                            className="c2 help-block"
                          >
                            Give the type of the parameter.
                          </span>
                        </HelpBlock>
                      </HelpBlock>
                    </span>
                  </InputWrapper>
                </div>
              </FormGroup>
            </FormGroup__StyledFormGroup>
          </Component>
        </Input>
        <Input
          addonAfter={null}
          bsStyle={null}
          buttonAfter={null}
          help="Give a default value if the parameter is not optional."
          id="default_value"
          label="Default value"
          maxLength={250}
          name="default_value"
          onChange={[Function]}
          placeholder=""
          type="text"
          value=""
        >
          <Component
            controlId="default_value"
            validationState={null}
          >
            <FormGroup__StyledFormGroup
              controlId="default_value"
              validationState={null}
            >
              <FormGroup
                bsClass="form-group"
                className=""
                controlId="default_value"
                validationState={null}
              >
                <div
                  className="form-group"
                >
                  <ControlLabel>
                    <ControlLabel
                      bsClass="control-label"
                      className="c0"
                      srOnly={false}
                    >
                      <label
                        className="c0 control-label"
                        htmlFor="default_value"
                      >
                        Default value
                      </label>
                    </ControlLabel>
                  </ControlLabel>
                  <InputWrapper>
                    <span>
                      <FormControl
                        componentClass="input"
                        inputRef={[Function]}
                        label="Default value"
                        maxLength={250}
                        name="default_value"
                        onChange={[Function]}
                        placeholder=""
                        type="text"
                        value=""
                      >
                        <FormControl
                          bsClass="form-control"
                          className="c1"
                          componentClass="input"
                          inputRef={[Function]}
                          label="Default value"
                          maxLength={250}
                          name="default_value"
                          onChange={[Function]}
                          placeholder=""
                          type="text"
                          value=""
                        >
                          <input
                            className="c1 form-control"
                            id="default_value"
                            label="Default value"
                            maxLength={250}
                            name="default_value"
                            onChange={[Function]}
                            placeholder=""
                            type="text"
                            value=""
                          />
                        </FormControl>
                      </FormControl>
                      <HelpBlock>
                        <HelpBlock
                          bsClass="help-block"
                          className="c2"
                        >
                          <span
                            className="c2 help-block"
                          >
                            Give a default value if the parameter is not optional.
                          </span>
                        </HelpBlock>
                      </HelpBlock>
                    </span>
                  </InputWrapper>
                </div>
              </FormGroup>
            </FormGroup__StyledFormGroup>
          </Component>
        </Input>
      </fieldset>
    </form>
  </div>
</ContentPackEditParameter>
`;
